--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,8 @@
-<h3>Welcome!</h3>
+<h3>Index</h3>
 
-<p>This is the Postit template. You've access the PostsController, index action. This is the index template. Find me under app/views/posts folder.</p>
+<ol>
+<% @posts.each do |post| %>
+  <li><%= post.title %></li>
+  <p><%= post.description %> | <%= link_to "Source", post.url %></p>
+<% end %>
+</ol>
