--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,7 @@
+<p class="pull-right">
+  <small><%= link_to "[Edit this post]", edit_post_path(@post) %></small>
+</p>
+
 <p>
   <%= render @post.categories %>
 </p>
