--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,6 +3,6 @@
     <%= link_to "Postit!", root_path, :class => 'brand' %>
   </li>
   <li>
-    <%= link_to 'link', new_post_path %>
+    <%= link_to 'New Post', new_post_path%>
   </li>
 </ul>
