wired up Categories controller with strong parameters. Also implemented validation. Views still a WIP

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,6 +3,12 @@
     <%= link_to "Postit!", root_path, :class => 'brand' %>
   </li>
   <li>
-    <%= link_to 'New Post', new_post_path%>
+    <%= link_to 'A Tealeaf Academy Project', "http://gotealeaf.com"%>
   </li>
 </ul>
+<div class="nav_item">
+  <%= link_to "New Post", new_post_path, class: "btn btn-primary btn-small"%>
+</div>
+<div class="nav_item">
+  <%= link_to "New Category", new_category_path, class: "btn btn-small" %>
+</div>
