--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,6 @@
-<h4>Display posts in category</h4>
+<% header = link_to("All Posts", posts_path) + " &raquo; #{@category.name}".html_safe%>
+<%= render 'shared/content_title', title: header %>
+
+<% @category.posts.each do |post| %>
+  <%= render 'posts/post', post: post %>
+<% end %>
