--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,9 +6,20 @@
     <%= link_to 'A Tealeaf Academy Project', "http://gotealeaf.com"%>
   </li>
 </ul>
-<div class="nav_item">
-  <%= link_to "New Post", new_post_path, class: "btn btn-primary btn-small"%>
-</div>
+<% if logged_in? %>
+  <div class="nav_item">
+    <%= link_to "Log Out", logout_path, class: "btn btn-danger btn-small"%>
+  </div>
+<% else %>
+  <div class="nav_item">
+    <%= link_to "Log In", login_path, class: "btn btn-success btn-small"%>
+  </div>
+<% end %>
+<% if logged_in? %>
+  <div class="nav_item">
+    <%= link_to "New Post", new_post_path, class: "btn btn-primary btn-small"%>
+  </div>
+<% end %>
 <div class="btn-group nav_item">
   <%= link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
     Categories <span class="caret"></span>
@@ -17,12 +28,14 @@
     <% Category.all.each do |category| %>
     <li><%= link_to category.name, category_path(category)  %></li>
     <% end %>
-    <li class="divider"></li>
-    <li>
-      <%= link_to(new_category_path) do%>
-        <i class="icon-plus"></i>
-        Create Category
-      <% end %>
-    </li>
+    <% if logged_in? %>
+      <li class="divider"></li>
+      <li>
+        <%= link_to(new_category_path) do%>
+          <i class="icon-plus"></i>
+          Create Category
+        <% end %>
+      </li>
+    <% end %>
   </ul>
 </div>
