--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,10 +7,29 @@
   </li>
 </ul>
 <% if logged_in? %>
-  <div class="nav_item">
-    <%= link_to "Log Out", logout_path, class: "btn btn-danger btn-small"%>
+  <div class="btn-group nav_item">
+    <%= link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
+      <%= current_user.username %> <span class="caret"></span>
+    <% end %>
+    <ul class="dropdown-menu">
+      <li> <%= link_to edit_user_path(current_user) do %>
+        <i class="icon-pencil"></i>
+        Edit Profile
+        <% end %>
+      </li>
+      <li> <%= link_to user_path(current_user) do %>
+        <i class="icon-user"></i>
+        View Profile
+        <% end %>
+      </li>
+      <li> <%= link_to logout_path  do %>
+        <i class="icon-circle-arrow-left"></i>
+        Logout of PostIt
+        <% end %>
+      </li>
+    </ul>
   </div>
-<% else %>
+  <% else %>
   <div class="nav_item">
     <%= link_to "Register", register_path, class: "btn btn-info btn-small"%>
   </div>
