--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<% if current_user.id == @post.user_id %>
+<% if logged_in? && current_user.id == @post.user_id %>
   <p class="pull-right">
     <small><%= link_to "[Edit this post]", edit_post_path(@post) %></small>
   </p>
@@ -8,7 +8,7 @@
   <%= render @post.categories %>
 </p>
 
-<h2> <%= link_to @post.title, @post.url %> </h2>
+<h2> <%= link_to @post.title, url_fixer(@post.url) %> </h2>
 
 <div class="well">
     <p><%= @post.description %></p>
@@ -33,6 +33,7 @@
 
 <hr />
 
+<h4>Comments:</h4>
 <% @post.comments.each do |comment| %>
 <%= render 'comment', comment: comment %>
 <% end %>
