implemented voting on comments

--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -1,6 +1,15 @@
 <% show_title ||= false %>
+<div class="span0 well text-center" style="clear: left;">
+  <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: 'post' do %>
+    <i class="icon-arrow-up"></i>
+  <% end %>
+  <p><%= "Total Votes" %></p>
+  <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: 'post' do %>
+    <i class="icon-arrow-down"></i>
+  <% end %>
+</div>
 
-<div class="well">
+<div class="span8 well">
   <% if show_title %>
     <p>Post Title: <%= link_to comment.post.title, post_path(comment.post) %></p>
   <% end %>
