--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -38,5 +38,7 @@
 <%= render 'comment', comment: comment %>
 <% end %>
 
-<hr />
-<p><%= link_to "Index", posts_path %></p>
+<div style="clear: both;">
+  <hr />
+  <p><%= link_to "Index", posts_path %></p>
+</div>
