--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -38,7 +38,7 @@
 <%= render 'comment', comment: comment %>
 <% end %>
 
-<div style="clear: both;">
+<div>
   <hr />
   <p><%= link_to "Index", posts_path %></p>
 </div>
