--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,7 +3,7 @@
     <%= link_to vote_post_path(post, vote: true), method: 'post' do %>
       <i class="icon-arrow-up"></i>
     <% end %>
-    <p><%= "Total Votes" %></p>
+    <p><%= post.total_number_of_votes %></p>
     <%= link_to vote_post_path(post, vote: false), method: 'post' do %>
       <i class="icon-arrow-down"></i>
     <% end %>
