added voting validation

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,11 +1,15 @@
 <div class="row">
   <div class="span0 well text-center">
-    <%= link_to vote_post_path(post, vote: true), method: 'post' do %>
-      <i class="icon-arrow-up"></i>
+    <% if logged_in? %>
+      <%= link_to vote_post_path(post, vote: true), method: 'post' do %>
+        <i class="icon-arrow-up"></i>
+      <% end %>
     <% end %>
-    <p><%= post.total_number_of_votes %></p>
-    <%= link_to vote_post_path(post, vote: false), method: 'post' do %>
-      <i class="icon-arrow-down"></i>
+    <p>Votes: <%= post.total_number_of_votes %></p>
+    <% if logged_in? %>
+      <%= link_to vote_post_path(post, vote: false), method: 'post' do %>
+        <i class="icon-arrow-down"></i>
+      <% end %>
     <% end %>
   </div>
   <div class="span8 well">
