--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -1,12 +1,16 @@
 <% show_title ||= false %>
 <div class="row">
   <div class="span0 well text-center">
-    <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: 'post' do %>
-      <i class="icon-arrow-up"></i>
+    <% if logged_in? %>
+      <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: 'post' do %>
+        <i class="icon-arrow-up"></i>
+      <% end %>
     <% end %>
-    <p><%= comment.total_number_of_votes %></p>
-    <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: 'post' do %>
-      <i class="icon-arrow-down"></i>
+    <p>Votes: <%= comment.total_number_of_votes %></p>
+    <% if logged_in? %>
+      <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: 'post' do %>
+        <i class="icon-arrow-down"></i>
+      <% end %>
     <% end %>
   </div>
 
