added a small amount of styling to the main layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tealeaf Academy - Postit</title>
+    <title>Postit</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <%= stylesheet_link_tag "application", :media => "all" %>
@@ -33,5 +33,9 @@
         </footer>
       </div> <!--! end of .container -->
     </div> <!--! end of #main -->
+    <div class="my_footer">
+      <%= link_to 'A Tealeaf Academy Project', "http://gotealeaf.com"%>
+      <%= link_to '< > by Patrick Garrett Pavesi', "https://github.com/patrick-g-pavesi/postit", id: "github_link"%>
+    </div>
   </body>
 </html>
