--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,3 +41,25 @@ div.nav_item {
 div.comment_votes {
   padding: 10px;
 }
+
+.my_footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  background-color: #E8E8E8;
+  border-top: 2px solid #E3E3E3;
+  text-align: center;
+}
+
+.my_footer a{
+  color: #9E9E9E;
+  position: relative;
+  top: 5px;
+}
+
+#github_link{
+  float: right;
+  margin-right: 10px;
+  font-size: 10px;
+}
