added a small link on the bottom nav to get pack to the main posts page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,9 @@
       </div> <!--! end of .container -->
     </div> <!--! end of #main -->
     <div class="my_footer">
-      <%= link_to 'A Tealeaf Academy Project', "http://gotealeaf.com"%>
-      <%= link_to '< > by Patrick Garrett Pavesi', "https://github.com/patrick-g-pavesi/postit", id: "github_link"%>
+      <%= link_to 'All Posts', posts_path, id: "posts_index" %>
+      <%= link_to 'A Tealeaf Academy Project', "http://gotealeaf.com" %>
+      <%= link_to '< > by Patrick Garrett Pavesi', "https://github.com/patrick-g-pavesi/postit", id: "github_link" %>
     </div>
   </body>
 </html>
