--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,3 +63,9 @@ div.comment_votes {
   margin-right: 10px;
   font-size: 10px;
 }
+
+#posts_index {
+  float: left;
+  margin-left: 10px;
+  font-weight: bold;
+}
