--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
     <div class="my_footer">
       <%= link_to 'All Posts', posts_path, id: "posts_index" %>
       <%= link_to 'A Tealeaf Academy Project', "http://gotealeaf.com" %>
-      <%= link_to '< > by Patrick Garrett Pavesi', "https://github.com/patrick-g-pavesi/postit", id: "github_link" %>
+      <%= link_to 'Source < >', "https://github.com/patrick-g-pavesi/postit", id: "github_link" %>
     </div>
   </body>
 </html>
