--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -7,7 +7,7 @@
       <% end %>
     <% end %>
     <p id='comment_<%= comment.id %>_votes'>Votes: <%= comment.total_number_of_votes %></p>
-    <p id='vote_confirm'></p>
+    <small id='vote_error'></small>
     <% if logged_in? %>
       <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: 'post', remote: true do %>
         <i class="icon-arrow-down" id="comment_<%= comment.id %>_down_arrow"></i>
