--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -34,6 +34,6 @@
 <hr />
 
 <h4>Comments:</h4>
-<% @post.reload.comments.each do |comment| %>
+<% @post.comments.reload.each do |comment| %>
   <%= render 'comment', comment: comment %>
 <% end %>
