implemented a way to keep track of admins, and to allow them to perform certain actions over users

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -47,7 +47,7 @@
     <% Category.all.each do |category| %>
     <li><%= link_to category.name, category_path(category)  %></li>
     <% end %>
-    <% if logged_in? %>
+    <% if logged_in? && current_user.admin? %>
       <li class="divider"></li>
       <li>
         <%= link_to(new_category_path) do%>
