--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<% if logged_in? && current_user.id == @post.user_id %>
+<% if (logged_in? && (current_user.admin? || current_user.id == @post.user_id)) %>
   <p class="pull-right">
     <small><%= link_to "[Edit this post]", edit_post_path(@post) %></small>
   </p>
