--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,8 @@
   <div class="dl-horizontal">
     <dt>Username:</dt>
     <dd><%= @user.username %></dd>
+    <dt>Timezone:</dt>
+    <dd><%= @user.time_zone %></dd>
   </div>
 </div>
 
