--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,39 +1,8 @@
 <ul class="nav">
   <li>
-    <%= link_to "Postit!", root_path, :class => 'brand' %>
+    <%= link_to "PostIt!", root_path, :class => 'brand' %>
   </li>
 </ul>
-<% if logged_in? %>
-  <div class="btn-group nav_item">
-    <%= link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
-      <%= current_user.username %> <span class="caret"></span>
-    <% end %>
-    <ul class="dropdown-menu">
-      <li> <%= link_to edit_user_path(current_user) do %>
-        <i class="icon-pencil"></i>
-        Edit Profile
-        <% end %>
-      </li>
-      <li> <%= link_to user_path(current_user) do %>
-        <i class="icon-user"></i>
-        View Profile
-        <% end %>
-      </li>
-      <li> <%= link_to logout_path  do %>
-        <i class="icon-circle-arrow-left"></i>
-        Logout of PostIt
-        <% end %>
-      </li>
-    </ul>
-  </div>
-  <% else %>
-  <div class="nav_item">
-    <%= link_to "Register", register_path, class: "btn btn-info btn-small"%>
-  </div>
-  <div class="nav_item">
-    <%= link_to "Log In", login_path, class: "btn btn-success btn-small"%>
-  </div>
-<% end %>
 <% if logged_in? %>
   <div class="nav_item">
     <%= link_to "New Post", new_post_path, class: "btn btn-primary btn-small"%>
@@ -58,3 +27,36 @@
     <% end %>
   </ul>
 </div>
+<% if logged_in? %>
+  <div class="btn-group nav_item" id="user_dropdown">
+    <%= link_to '#', class: 'btn btn-info btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
+      <%= current_user.username %> <span class="caret"></span>
+    <% end %>
+    <ul class="dropdown-menu">
+      <li> <%= link_to edit_user_path(current_user) do %>
+        <i class="icon-pencil"></i>
+        Edit Profile
+        <% end %>
+      </li>
+      <li> <%= link_to user_path(current_user) do %>
+        <i class="icon-user"></i>
+        View Profile
+        <% end %>
+      </li>
+      <li> <%= link_to logout_path  do %>
+        <i class="icon-circle-arrow-left"></i>
+        Logout of PostIt
+        <% end %>
+      </li>
+    </ul>
+  </div>
+  <% else %>
+  <div class="nav_item">
+    <%= link_to "Log In", login_path, class: "btn btn-success btn-small"%>
+  </div>
+<% end %>
+<% unless logged_in? %>
+<div class="pull-right">
+  <%= link_to "Register", register_path, class: "btn btn-info btn-small"%>
+</div>
+<% end %>
