--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -29,7 +29,7 @@
 </div>
 <% if logged_in? %>
   <div class="btn-group nav_item" id="user_dropdown">
-    <%= link_to '#', class: 'btn btn-info btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
+    <%= link_to '#', class: 'btn btn-sucess btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
       <%= current_user.username %> <span class="caret"></span>
     <% end %>
     <ul class="dropdown-menu">
